<resources>
    <string name="app_name">PSBI Trial</string>
    <string name="section1_mainheading"> Section 1: Identifying Information</string>
    <string name="section2_mainheading"> Section 2: Young Infant Information</string>
    <string name="section3_mainheading"> Section 3: Eligibility </string>
    <string name="section4_mainheading"> Section 4: Treatment </string>
    <string name="section5_mainheading"> Section 5: Diagnosis and outcome</string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_surveillance_form">OPEN SURVEILLANCE FORM</string>
    <string name="open_onhold_form">UPDATE ONHOLD FORM</string>
    <string name="open_followup_form">OPEN FOLLOW-UP FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="no"> No </string>
    <string name="dkn"> Don’t Know </string>
    <string name="none"> No one </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available  </string>
    <string name="nap"> Not Applicable </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week </string>
    <string name="days"> Day </string>
    <string name="hours"> Hour </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees">  Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="contactnum">Contact Number </string>
    <string name="checkHHpresent"> The name of head of the household corresponds to the line listing data.</string>
    <string name="newHHheadname"> Name of new head of the household </string>
    <string name="title01">Section 1: Identifying Information</string>
    <string name="tsf101">Assessment number</string>
    <string name="tsf102">MR number of baby</string>
    <string name="tsf103">Name of assessor (Initials)</string>
    <string name="tsf104">Name of the infant</string>
    <string name="tsf105">Accompanied by</string>
    <string name="tsf10501">Mother</string>
    <string name="tsf10502">Father</string>
    <string name="tsf10503">Other</string>
    <string name="tsf106">Date of visit [dd/mm/yyyy]</string>
    <string name="tsf107">Time of visit (00:00 24 hour format)</string>
    <string name="tsf108">Address</string>
    <string name="tsf109">Catchment area</string>
    <string name="tsf10901">Yes</string>
    <string name="tsf10902">No</string>
    <string name="tsf110">Hospital Name </string>
    <string name="tsf111">Baby presented through</string>
    <string name="tsf11101">NICU</string>
    <string name="tsf11102">OPD</string>
    <string name="tsf11103">ER</string>
    <string name="tsf112">Important notes about the patient</string>
    <string name="tsf20503">Underdetermined</string>
    <string name="title02">Section 2: Young Infant Information</string>
    <string name="tsf201">Date of Birth [dd/mm/yyyy]:</string>
    <string name="tsf202">Current Age (in days)</string>
    <string name="tsf203">Weight (in grams)</string>
    <string name="tsf204">Weight for age (SD)</string>
    <string name="tsf205">Sex of Child</string>
    <string name="tsf20501">Male</string>
    <string name="tsf20502">Female</string>
    <string name="tsf206">Presenting Complains</string>
    <string name="tsf206c1">1-Complain</string>
    <string name="tsf206d1">Since</string>
    <string name="tsf206c2">2-Complain</string>
    <string name="tsf206d2">Since</string>
    <string name="tsf206c3">3-Complain</string>
    <string name="tsf206d3">Since</string>
    <string name="tsf206c4">4-Complain</string>
    <string name="tsf206d4">Since</string>
    <string name="title03">Section 3: Eligibility </string>
    <string name="tsf301">Breath Count (1 minute)</string>
    <string name="tsf302">Repeat breath count if  &gt; 60 bpm</string>
    <string name="tsf303">Severe chest indrawing</string>
    <string name="tsf30301">Yes</string>
    <string name="tsf30302">No</string>
    <string name="tsf304">Axillary temperature</string>
    <string name="tsf305">Repeat temperature (after 30min)</string>
    <string name="tsf306">Movement</string>
    <string name="tsf30601">Spontaneously</string>
    <string name="tsf30602">Only on stimulation</string>
    <string name="tsf30603">Not moving at all</string>
    <string name="tsf307">Feeding</string>
    <string name="tsf30701">Normally</string>
    <string name="tsf30702">Not feeding well</string>
    <string name="tsf30703">Not feeding at all</string>
    <string name="tsf308">Convulsions present or reported</string>
    <string name="tsf30801">Yes</string>
    <string name="tsf30802">No</string>
    <string name="tsf309">Any major congenital malformation</string>
    <string name="tsf30901">Yes</string>
    <string name="tsf30902">No</string>
    <string name="tsf310">Severe jaundice</string>
    <string name="tsf31001">Yes</string>
    <string name="tsf31002">No</string>
    <string name="tsf311">Any condition requiring major surgery</string>
    <string name="tsf31101">Yes</string>
    <string name="tsf31102">No</string>
    <string name="tsf312">Any sign of meningitis</string>
    <string name="tsf31201">Yes</string>
    <string name="tsf31202">No</string>
    <string name="tsf313">Any sign suggestive of bone or joint infection</string>
    <string name="tsf31301">Yes</string>
    <string name="tsf31302">No</string>
    <string name="tsf314">Signs of severe dehydration</string>
    <string name="tsf31401">Yes</string>
    <string name="tsf31402">No</string>
    <string name="tsf315">Did the signs appear within first 24 hours of birth?</string>
    <string name="tsf31501">Yes</string>
    <string name="tsf31502">No</string>
    <string name="tsf316">Was child admitted in any hospital within last 2 weeks?</string>
    <string name="tsf31601">Yes</string>
    <string name="tsf31602">No</string>
    <string name="tsf317">Has child taken any injectable antibiotic in last 48 hours?</string>
    <string name="tsf31701">Yes</string>
    <string name="tsf31702">No</string>
    <string name="tsf318">Is child currently enrolled in any other research study?</string>
    <string name="tsf31801">Yes</string>
    <string name="tsf31802">No</string>
    <string name="tsf319">Does child have mild CSI?</string>
    <string name="tsf31901">Yes</string>
    <string name="tsf31902">No</string>
    <string name="tsf320">Does the child have moderate CSI?</string>
    <string name="tsf32001">Yes</string>
    <string name="tsf32002">No</string>
    <string name="tsf321">Does the child have critical illness signs?</string>
    <string name="tsf32101">Yes</string>
    <string name="tsf32102">No</string>
    <string name="tsf322">Can the child be included in PSBI trial?</string>
    <string name="tsf32201">Yes</string>
    <string name="tsf32202">No</string>
    <string name="tsf323">Does the already included child have any exclusion criteria?</string>
    <string name="tsf32301">Yes</string>
    <string name="tsf32302">No</string>
    <string name="title04">Section 4: Treatment </string>
    <string name="tsf401">Antibiotic given</string>
    <string name="tsf40101">Oral</string>
    <string name="tsf40102">I/M</string>
    <string name="tsf40103">I/V</string>
    <string name="tsf40104">None</string>
    <string name="tsf402">Name of antibiotics </string>
    <string name="tsf40201">Amoxicillin</string>
    <string name="tsf40202">Ampicillin</string>
    <string name="tsf40203">Gentamycin</string>
    <string name="tsf40204">Cefotaxime</string>
    <string name="tsf40205">Amikacin</string>
    <string name="tsf40206">Ceftriaxone</string>
    <string name="tsf40207">Meropenem</string>
    <string name="tsf40208">Vancomycin</string>
    <string name="tsf40209">Ceftazidime</string>
    <string name="tsf40210">Other antibiotics</string>
    <string name="title05">Section 5: Diagnosis and outcome</string>
    <string name="tsf501">Differential diagnosis</string>
    <string name="tsf502">Place of treatment advised</string>
    <string name="tsf50201">Home</string>
    <string name="tsf50202">Hospital</string>
    <string name="tsf503">Outcome at assessment (OPD or ER)</string>
    <string name="tsf50301">Baby sent home</string>
    <string name="tsf50302">Baby admitted in same hospital</string>
    <string name="tsf50303">Baby advised admission but family refused</string>
    <string name="tsf50304">Baby referred to other hospital</string>
    <string name="tsf50305">Baby advised referral but family refused</string>
    <string name="tsf50306">Baby died during assessment</string>
    <string name="title_activity_section1">Section1Activity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="tsf40298">Don\'t Know</string>
    <string name="hold_child">Please hold child <b>%1$s</b> in waiting area and check temperature after 30 minutes.</string>
    <string name="istatusb">Incomplete</string>
    <string name="istatusa">Complete</string>
    <string name="istatusc">On-Hold</string>
    <string name="istatus">Interview Status</string>
    <string name="btnDownload">Download Data</string>
    <string name="zScoreMsg">"Please click on Z-Score Button"</string>
    <string name="zScoreEmpty">"Z-Score cannot be evaluated with missing values."</string>
    <string name="hlaz">HLAZ</string>
    <string name="waz">WAZ</string>
    <string name="whz">WHZ</string>
</resources>