<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
        <variable
            name="form"
            type="edu.aku.hassannaqvi.psbitrial.models.Form" />
        <variable
            name="callback"
            type="edu.aku.hassannaqvi.psbitrial.ui.sections.Section4Activity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bg_gray"
        android:orientation="vertical">

        <!-- CUSTOM TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ToolbarTheme"
            app:titleTextAppearance="@style/ToolbarTheme" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/GrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- title04  Title   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVtitle04"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"/>
                </androidx.cardview.widget.CardView>

                <!-- tsf401  CheckBox   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVtsf401"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_tsf401" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/tsf401" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/tsf401check"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:tag="0">

                            <CheckBox
                                android:id="@+id/tsf40101"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40101" />

                            <CheckBox
                                android:id="@+id/tsf40102"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40102" />

                            <CheckBox
                                android:id="@+id/tsf40103"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40103" />

                            <CheckBox
                                android:id="@+id/tsf40104"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40104" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- tsf402  CheckBox   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVtsf402"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/quesNum"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/Q_tsf402" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:text="@string/tsf402" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/tsf402check"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:tag="0">

                            <CheckBox
                                android:id="@+id/tsf40201"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40201" />

                            <CheckBox
                                android:id="@+id/tsf40202"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40202" />

                            <CheckBox
                                android:id="@+id/tsf40203"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40203" />

                            <CheckBox
                                android:id="@+id/tsf40204"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40204" />

                            <CheckBox
                                android:id="@+id/tsf40205"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40205" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:tag="0">
                            <CheckBox
                                android:id="@+id/tsf40206"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40206" />

                            <CheckBox
                                android:id="@+id/tsf40207"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40207" />

                            <CheckBox
                                android:id="@+id/tsf40208"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40208" />

                            <CheckBox
                                android:id="@+id/tsf40209"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40209" />

                            <CheckBox
                                android:id="@+id/tsf40298"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:text="@string/tsf40298" />


                        </LinearLayout> <EditText
                        android:id="@+id/tsf40298x"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="AaBaCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                        android:hint="@string/tsf40298"
                        android:tag="tsf40298"
                        android:text='@{tsf40298.checked ? tsf40298x.getText().toString() : ""}'
                        android:visibility='@{tsf40298.checked? View.VISIBLE : View.GONE}' />
                    </LinearLayout>
                </androidx.cardview.widget.CardView><!--EndButton LinearLayout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="24dp"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_End"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:background="@android:color/transparent"
                        android:textStyle="bold"
                        android:onClick="btnEnd"
                        android:text="Cancel"
                        android:textColor="@color/colorPrimary" />

                    <Button
                        android:id="@+id/btn_Continue"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:backgroundTintMode="src_atop"
                        android:backgroundTint="@color/colorAccent"
                        android:background="@drawable/capsule"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:onClick="btnContinue"
                        android:text="Save"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>